--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <section>
-            <img src="pattern.png" alt="">
+        <section> 
+             <img class="sfondo2" src="pattern.png" alt="">
+        </section>
             <h1><strong>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</strong></h1>
             <span class="scritta" >scritto da The Booleaner</span><br>
             <span class="scritta" >10/10/2020</span>
-        </section>
+        
         <section>
             <img src="tim-1.jpg" alt="">
             <img src="tim-2.jpg" alt=""><br>
